--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=nomad_db
-DB_PASSWORD=Seema@03
+DB_USER=nomad_user
+DB_PASSWORD=dX2X0KOAMbJxC9uTmB7lgR1Oe9De6N2Z
+DB_HOST=dpg-d1n27indiees73ekm79g-a
+DB_NAME=nomaddb
 DB_PORT=5432
+
