--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-DB_USER=nomad_user
-DB_PASSWORD=dX2X0KOAMbJxC9uTmB7lgR1Oe9De6N2Z
-DB_HOST=dpg-d1n27indiees73ekm79g-a
-DB_NAME=nomaddb
-DB_PORT=5432
+DATABASE_URL=postgresql://nomad_owner:npg_NhVI5uxfwPd8@ep-curly-violet-a1hhsn0l-pooler.ap-southeast-1.aws.neon.tech/nomad?sslmode=require&channel_binding=require
+
 
